etcd/etcd-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
  namespace: sensugo
spec:
  type: NodePort
  ports:
  - name: etcd-client
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: sensugo
spec:
  clusterIP: None
  ports:
  - port: 2379
    name: client
  - port: 2380
    name: peer
  selector:
    app: etcd

---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: etcd
  namespace: sensugo
  labels:
    app: etcd
spec:
  serviceName: etcd
  replicas: 3
  template:
    metadata:
      name: etcd
      labels:
        app: etcd
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - etcd
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:latest
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
        volumeMounts:
        - name: data
          mountPath: /var/run/etcd
        command:
          - /bin/sh
          - -c
          - |
            PEERS="etcd-0=http://etcd-0.etcd.sensugo:2380,etcd-1=http://etcd-1.etcd.sensugo:2380,etcd-2=http://etcd-2.etcd.sensugo:2380"
            exec etcd --name ${HOSTNAME} \
              --auto-compaction-mode=periodic \
              --auto-compaction-retention=72h \
              --listen-peer-urls http://0.0.0.0:2380 \
              --listen-client-urls http://0.0.0.0:2379 \
              --advertise-client-urls http://${HOSTNAME}.etcd:2379 \
              --initial-advertise-peer-urls http://${HOSTNAME}:2380 \
              --initial-cluster-token etcd-cluster-1 \
              --initial-cluster ${PEERS} \
              --initial-cluster-state new \
              --data-dir /var/run/etcd/default.etcd
      nodeSelector:
          app: sensugo
      tolerations:
        - effect: NoExecute
          key: app
          operator: Equal
          value: sensugo
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: performance-retain
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
