etcd/etcd-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: etcd-ingress
  namespace: sensugo
spec:
  rules:
  - host: sensugo-etcd.example.com
    http:
      paths:
      - backend:
          serviceName: etcd-client
          servicePort: 2379
        path: /
